<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.mycrg</groupId>
    <artifactId>acceptance-tests</artifactId>
    <version>1.4-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>acceptance-tests</name>
    <description>Acceptance tests</description>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <junit.version>4.13</junit.version>
        <cucumber.version>7.27.0</cucumber.version>
        <maven.compiler.version>3.15.0</maven.compiler.version>
        <spotbugs.version>4.8.1</spotbugs.version>

        <skipAcceptanceTests>true</skipAcceptanceTests>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.1</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>6.0.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/tools.jackson.core/jackson-databind -->
        <dependency>
            <groupId>tools.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>3.0.4</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>io.minio</groupId>
            <artifactId>minio</artifactId>
            <version>8.5.7</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>amqp-client</artifactId>
            <version>5.14.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.geolatte</groupId>
            <artifactId>geolatte-geom</artifactId>
            <version>1.10</version>
            <scope>test</scope>
        </dependency>

        <!-- CRG -->
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>auth-service-contract</artifactId>
            <version>2.12.2-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>common-contracts</artifactId>
            <version>2.11.10-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>data-service-contract</artifactId>
            <version>2.9.11-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>ru.mycrg</groupId>
            <artifactId>geo-json</artifactId>
            <version>2.1-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>GisPlatformFeed</id>
            <name>Gis portal azure repository</name>
            <url>
                https://azure2022eng.geoplan.local/DefaultCollection/GIS_Platform/_packaging/GisPlatformFeed/maven/v1
            </url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>GisPlatformFeed</id>
            <url>
                https://azure2022eng.geoplan.local/DefaultCollection/GIS_Platform/_packaging/GisPlatformFeed/maven/v1
            </url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <skipTests>${skipAcceptanceTests}</skipTests>
                    <systemPropertyVariables>
                        <!--suppress UnresolvedMavenProperty -->
                        <environment>${env.HOST}</environment>
                        <!--suppress UnresolvedMavenProperty -->
                        <environment>${env.PORT}</environment>
                        <!--suppress UnresolvedMavenProperty -->
                        <environment>${env.ROOT_NAME}</environment>
                        <!--suppress UnresolvedMavenProperty -->
                        <environment>${env.ROOT_PASS}</environment>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.8.1.0</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>spotbugs-check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
